--- a/frontend/src/users/UserAdd.css
+++ b/frontend/src/users/UserAdd.css
@@ -4,20 +4,29 @@
   padding: 20px;
  }
 
-.add-card {
-  flex-direction: row;
-  gap: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #f5f5f5;
-  padding: 12px 16px;
-  border-radius: 8px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-}
+ .add-card {
+   flex-direction: row;
+   gap: 12px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background: #f5f5f5;
+   padding: 12px 16px;
+   border-radius: 8px;
+   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+ }
 
 .add-card input {
     flex: 1;
+}
+
+@media(max-width: 600px) {
+    .add-card {
+        flex-direction: column;
+    }
+    .add-card input {
+        width: 80%;
+    }
 }
 
 .add-button {
