--- a/android/app/src/main/res/drawable/logo_splash.xml
+++ b/android/app/src/main/res/drawable/logo_splash.xml
@@ -1,10 +1,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="96dp" android:height="96dp" android:gravity="center">
+    <item android:gravity="center">
         <bitmap
-            android:src="@drawable/expenses_logo_splash"
-            android:gravity="center"
-            android:tileMode="disabled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:antialias="true"
             android:filter="true"
-            android:antialias="true"/>
+            android:gravity="center"
+            android:src="@drawable/expenses_logo_splash"
+            android:tileMode="disabled" />
     </item>
 </layer-list>
+<!-- android:width="96dp" android:height="96dp" -->
