--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,8 @@
 body {
-  padding-top: env(safe-area-inset-top);
+  padding-top: constant(safe-area-inset-top); /* iOS Safari < 11.2 */
+  padding-top: env(safe-area-inset-top);      /* iOS Safari >= 11.2 */
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 10vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-navbar {
+  height: 80px; /* oder was du brauchst */
 }
