--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,3 +6,84 @@ body {
 .custom-navbar {
   height: 80px; /* oder was du brauchst */
 }
+
+.add-border {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+ }
+
+ .add-card {
+   flex-direction: row;
+   gap: 12px;
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-start;
+   background: #f5f5f5;
+   padding: 12px 16px;
+   border-radius: 8px;
+   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+ }
+
+ .user-card {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background: #f5f5f5;
+   padding: 12px 16px;
+   border-radius: 8px;
+   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+ }
+
+.add-card input {
+    flex: 1;
+}
+
+@media(max-width: 600px) {
+    .add-card {
+        flex-direction: column;
+    }
+    .add-card input {
+        width: 80%;
+    }
+    .user-card {
+        flex-direction: column;
+    }
+}
+
+.add-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #e63946;
+}
+
+.add-button:hover {
+  color: #a4161a;
+}
+
+.user-list {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.user-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+
+.delete-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #e63946;
+}
+
+.delete-button:hover {
+  color: #a4161a;
+}
