--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,22 +7,20 @@ body {
   height: 80px; /* oder was du brauchst */
 }
 
+.nav-link {
+  color: #fff !important;
+  text-decoration: none;
+}
+
+.nav-link.active {
+  color: #fff !important;
+  font-weight: bold;
+}
+
 .add-border {
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
- }
-
- .add-card {
-   flex-direction: row;
-   gap: 12px;
-   display: flex;
-   justify-content: space-between;
-   align-items: flex-start;
-   background: #f5f5f5;
-   padding: 12px 16px;
-   border-radius: 8px;
-   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  padding-top: 20px;
  }
 
  .user-card {
@@ -35,33 +33,38 @@ body {
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
  }
 
-.add-card input {
+.user-card input {
     flex: 1;
+    width: 100%;
 }
 
 @media(max-width: 600px) {
-    .add-card {
-        flex-direction: column;
-    }
-    .add-card input {
-        width: 80%;
-    }
     .user-card {
         flex-direction: column;
     }
 }
 
-.add-button {
+Button {
+  white-space: nowrap;
   background: transparent;
   border: none;
   cursor: pointer;
   font-size: 18px;
+}
+
+.Button:hover {
+  color: #a4161a;
+}
+
+.add-button {
+    color: #e63946;
+}
+
+.delete-button {
   color: #e63946;
 }
 
-.add-button:hover {
-  color: #a4161a;
-}
+
 
 .user-list {
   max-width: 600px;
@@ -76,14 +79,4 @@ body {
 }
 
 
-.delete-button {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 18px;
-  color: #e63946;
-}
 
-.delete-button:hover {
-  color: #a4161a;
-}
