use translation, handle errors, update styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,11 @@ body {
 }
 
 .custom-navbar {
-  height: 80px; /* oder was du brauchst */
+  height: 80px;
+}
+
+.navbar>.container {
+    margin-right: 0;
 }
 
 .add-border {
