--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,15 +13,40 @@ body {
   padding-top: 20px;
  }
 
+.card {
+   max-width: 600px;
+   margin: 0 auto;
+   margin-top: 20px;
+   align-items: center;
+   border: none;
+   font-size: 20px;
+}
+
  .user-card {
+   max-width: 600px;
+   margin: 0 auto;
+   margin-top: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #f5f5f5;
-   padding: 12px 16px;
+   padding: 5px;
    border-radius: 8px;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+   gap: 10px;
  }
+
+  .button-container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 10px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 5px;
+    border-radius: 8px;
+    gap: 10px;
+  }
 
 .user-card input {
     flex: 1;
@@ -45,18 +70,5 @@ Button {
 .Button:hover {
   color: #a4161a;
 }
-
-.user-list {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.user-cards {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
 
 
