--- a/android/app/src/prod/res/xml/network_security_config.xml
+++ b/android/app/src/prod/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <base-config cleartextTrafficPermitted="false" />
     <domain-config cleartextTrafficPermitted="false">
-        <domain includeSubdomains="true">https://our-expenses.duckdns.org</domain>
+        <domain includeSubdomains="true">https://expenses.alexander-kiemle.de</domain>
     </domain-config>
 </network-security-config>
