--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,8 +18,8 @@ body {
    margin: 0 auto;
    margin-top: 20px;
    align-items: center;
-   border: none;
-   font-size: 20px;
+   border: 0 !important;
+   font-size: 14px;
 }
 
  .user-card {
