--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,62 +1,72 @@
 body {
-  padding-top: constant(safe-area-inset-top); /* iOS Safari < 11.2 */
-  padding-top: env(safe-area-inset-top);      /* iOS Safari >= 11.2 */
+  padding-top: constant(safe-area-inset-top);
+  /* iOS Safari < 11.2 */
+  padding-top: env(safe-area-inset-top);
+  /* iOS Safari >= 11.2 */
 }
 
 .custom-navbar {
   height: 80px;
 }
-
+/* 
 .add-border {
   max-width: 600px;
   margin: 0 auto;
   padding-top: 20px;
- }
+} */
 
 .card {
-   max-width: 600px;
-   margin: 0 auto;
-   margin-top: 20px;
-   align-items: center;
-   border: 0 !important;
-   font-size: 14px;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 20px;
+  align-items: center;
+  border: 0 !important;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
 }
 
- .user-card {
-   max-width: 600px;
-   margin: 0 auto;
-   margin-top: 10px;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   background: #f5f5f5;
-   padding: 5px;
-   border-radius: 8px;
-   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-   gap: 10px;
- }
+.card .btn {
+  width: 100%;                /* Button nimmt die volle Breite der Card */
+  text-align: left !important; /* Text im Button linksbündig */
+  justify-content: flex-start; /* Für Bootstrap-Buttons mit Flex */
+}
 
-  .button-container {
-    max-width: 600px;
-    margin: 0 auto;
-    margin-top: 10px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding: 5px;
-    border-radius: 8px;
-    gap: 10px;
-  }
+.user-card {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #f5f5f5;
+  padding: 5px;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  gap: 10px;
+}
+
+.button-container {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 10px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 5px;
+  border-radius: 8px;
+  gap: 10px;
+}
 
 .user-card input {
-    flex: 1;
-    width: 100%;
+  flex: 1;
+  width: 100%;
 }
 
 @media(max-width: 600px) {
-    .user-card {
-        /*flex-direction: column;*/
-    }
+  .user-card {
+    /*flex-direction: column;*/
+  }
 }
 
 Button {
@@ -71,4 +81,7 @@ Button {
   color: #a4161a;
 }
 
-
+.content {
+  padding: 0 20px;
+  /* Add your desired padding values here */
+}
